# vocabkiller

./: .gitignore  AD_SYSTEM_GUIDE.md  AI_BASE_FORM_IDENTICAL_WORDS_FIX.md  BASE_FORM_TOGGLE_FIXES.md  CLAUDE.md  CROSS_PAGE_TIMER_TEST.md  DRAGGABLE_IMPLEMENTATION.md  ENHANCED_SPEAK_AND_TYPING_MODES.md  EXACT_MATCH_IMPLEMENTATION_FIXED.md  FINAL_FIXES_SUMMARY.md  FINAL_THREE_ISSUES_FIXES.md  FIXES_SUMMARY.md  GIT_WORKFLOW.md  IMPLEMENTATION_SUMMARY.md  IN_PLACE_AD_MODAL_TEST.md  LATEST_FIXES_SUMMARY.md  Original Code.rtf  PERFECT_CIRCLE_IMPLEMENTATION.md  PERFECT_CIRCLE_VERIFICATION.md  README.md  Suggestions for Text with placehoder.rtf  TESTING_INSTRUCTIONS.md  UNIQUE_WORDS_LIST_CLICK_OUTSIDE_COLLAPSE.md  _redirects  basicWords.json  deploy-to-netlify.md  package-lock.json  package.json  quick-indexing-steps.md  submit-to-directories.md  test-vps-api.js  test_spacy_function.py  test_spacy_local.py  vercel.json  vps-setup.sh  wrangler.toml
api/: spacy-lemmatize.py
netlify/: README.md  netlify.toml
public/: _redirects  about.html  ads.txt  asset-manifest.json  context-based-vocabulary-practice.html  friends-episode.html  friends-roleplay-typing.html  friends-scripts.html  index.html  learn-all-unique-words.html  learn-base-form-typing-game.html  learn-from-scripts.html  learn-original-text-subpage.html  learn-original-words-typing-game.html  learn-sentence-practice.html  learn-sentences-with-unique-words.html  learn-unknown-words-2-subpage.html  learn-unknown-words-subpage.html  manifest.json  privacy.html  robots.txt  sitemap.xml  test-lemmatization.html  test.html
scripts/: finalize_build.js  import_friends.js  prepare_build.js
src/: App 2.js  App.js  index.css  (+1 more)
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/src/: main.rs
(+282 files in other folders)
