[package]
name = "popfs"
version = "0.1.0"
description = "VocabKiller Floating Viewer Companion"
authors = ["VocabKiller"]
license = "MIT OR Apache-2.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
# Keep macOS private API; add shell-open (harmless and commonly enabled)
tauri = { version = "1", features = ["macos-private-api", "shell-open"] }

[features]
# Tauri action/build passes --features custom-protocol
# Map it to Tauri's internal custom-protocol feature and keep it as default
custom-protocol = ["tauri/custom-protocol"]
default = ["custom-protocol"]
