[package]
name = "popfs"
version = "0.1.0"
description = "VocabKiller Floating Viewer Companion"
authors = ["VocabKiller"]
license = "MIT OR Apache-2.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = ["macos-private-api", "shell-open"] }

[features]
custom-protocol = ["tauri/custom-protocol"]
default = ["custom-protocol"]
